--- a/deployment/secondary_architectures/s390.md
+++ b/deployment/secondary_architectures/s390.md
@@ -11,11 +11,10 @@ s390 is 31-bit-address/32-bit-data and s390x is 64 bit computing architecture. s
 
 ## Building your application for s390(x) architecture
 
-
 To build a package for s390(x) architecture in Fedora, use s390-koji command:
 
 ```
-$ s390-koji build --scratch rawhide srpm_pkg1
+s390-koji build --scratch rawhide srpm_pkg1
 ```
 
 The above command will start a scratch build of package srpm_pkg1 against Fedora rawhide for s390 and s390x architectures. Use "s390-koji \-\-help" in console to see all available options.
@@ -45,8 +44,8 @@ $ s390-koji build --scratch rawhide iprutils-2.4.11.1-1.fc25.src.rpm
   ....
 
 ```
-For each build, a Task ID is created in s390 koji. You can view build status and it's log by going to the url provided in Task info.
 
+For each build, a Task ID is created in s390 koji. You can view build status and it's log by going to the url provided in Task info.
 
 ## Viewing koji builds
 
@@ -63,6 +62,3 @@ If you face any difficulty reach out to us for help:
 ## More documentation
 
 More Fedora s390(x) specific details can be found at [Fedora Project  wiki](https://fedoraproject.org/wiki/Architectures/s390x)
-
-
-
